--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -41,6 +41,10 @@
             color: white;
             border-radius: 3px;
             font-size: 16px;
+            cursor: pointer;
+        }
+        button:hover {
+            background-color: #218838;
         }
     </style>
 </head>
@@ -53,23 +57,46 @@
     </div>
 
     <script>
-        // Lấy token từ URL
-        const token = new URLSearchParams(window.location.search).get('token');
+        // Xóa token khỏi URL sau khi lấy
+        const urlParams = new URLSearchParams(window.location.search);
+        const token = urlParams.get('token');
+
+        if (token) {
+            sessionStorage.setItem('resetToken', token);
+            const newUrl = window.location.origin + window.location.pathname;
+            window.history.replaceState({}, document.title, newUrl);
+        }
 
         async function resetPassword() {
             const newPassword = document.getElementById('newPassword').value;
             const confirmPassword = document.getElementById('confirmPassword').value;
+            const storedToken = sessionStorage.getItem('resetToken');
+
+            if (!storedToken) {
+                alert('Token không hợp lệ hoặc đã hết hạn.');
+                return;
+            }
+
+            if (!newPassword || !confirmPassword) {
+                alert('Vui lòng nhập đầy đủ thông tin.');
+                return;
+            }
+
+            if (newPassword.length < 6) {
+                alert('Mật khẩu phải có ít nhất 6 ký tự.');
+                return;
+            }
 
             if (newPassword !== confirmPassword) {
-                alert('Mật khẩu xác nhận không khớp');
+                alert('Mật khẩu xác nhận không khớp.');
                 return;
             }
 
             try {
-                const response = await fetch('http://localhost:3000/auth/reset-password', {
+                const response = await fetch('http://160.191.50.148:3000/auth/reset-password', {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
-                    body: JSON.stringify({ token, newPassword })
+                    body: JSON.stringify({ token: storedToken, newPassword })
                 });
 
                 const result = await response.json();
