nam anh reset html v2

--- a/public/reset-password.html
+++ b/public/reset-password.html
@@ -101,7 +101,11 @@
 
                 const result = await response.json();
                 if (response.ok) {
-                    alert('Mật khẩu đã được đặt lại thành công');
+                    alert('Mật khẩu đã được đặt lại thành công. Trang sẽ tự động đóng.');
+
+                    // Xóa token và đóng trang
+                    sessionStorage.removeItem('resetToken');
+                    window.close();
                 } else {
                     alert('Lỗi: ' + result.message);
                 }
